百度验证失效处理

--- a/source/_posts/2017-01-17-哆啦A梦.md
+++ b/source/_posts/2017-01-17-哆啦A梦.md
@@ -5,8 +5,7 @@ tags: CSS
 categories: CSS
 updated:
 ---
-使用CSS3属性来画出一个哆啦A梦，LIKE THIS:
-![](https://a-ssl.duitang.com/uploads/item/201507/29/20150729101813_ZMHhY.jpeg)
+使用CSS3属性来画出一个哆啦A梦;
 下面是代码的简单实现，以及用到的一些属性介绍。
 <!-- more -->
 ##### 图片结构拆分
