--- a/source/_posts/2017-04-24-资源和文章.md
+++ b/source/_posts/2017-04-24-资源和文章.md
@@ -5,6 +5,7 @@ tags: 'resource'
 categories: 'resources'
 updated:
 ---
+任何被动的痛苦，都没法给人带来进步，你的痛苦倒是可能给老板带来更多收入。
 > 分享，是为了受益更多的朋友。
 
 <!-- more -->
@@ -17,9 +18,13 @@ updated:
 
 ### 文章
 1. [前端的自我修养](http://taobaofed.org/blog/2016/03/23/the-growth-of-front-end/index.html)
-	印象比较深的是那句 __You are the owner of your career.__ 
-	其次是对我们自身的思考，知识和能力。一定要主动去建立自己的知识体系，说实话这个点我现在很惭愧，一直在追潮流，一直在后面，起步晚，导致基础不稳。还有就是能力的培养，重点是要去练习，思考。
-	这两点，让我开始冷静审视自己。
+	印象比较深的是那句 __You are the owner of your career.__ __知识和能力__。
+	一定要主动去建立自己的知识体系。在知识部分，分为两部分，一是标准，而是技术。如何建立自己的知识体系：第一步，寻找线索，确定要学的知识点，找标准文档和附录，找源代码，找最初的争议。第二步，建立联系。第三步，分类，建立联系以后，我们依据知识之间的联系，进行分类，就可以得到一张图谱，在这个图里面，我们就可以非常清楚地知道，哪些知识，是非常重要的，哪些，其实是可以互相替代的。第四步，追本溯源，当我对一个知识体系的全貌有了概念以后，占了全面两个字，接下来需要确认它的准确性。很多知识，在社区，会有很多的争议，该相信谁呢，这是个问题。而我的答案，就是追本溯源，去找它最初的讨论和定义。除了 wiki-google 学术搜索的组合，还有一些邮件列表和 github 提交历史，也是非常适合去查证一些概念和技术的历史的。最后说，我讲的这个建立知识体系的过程，是不断接受新知识，挑战、质疑原有的体系，推翻再重建，每一次循环，你的知识体系都变得更加坚固，更加强大。
+
+	还有就是能力的培养，重点是要去教材，训练。能力部分的比重占据80%，分别是 __编程能力__ ，就是用代码解决问题的能力，编程能力越强，面对越复杂的问题就会越得心应手，编程能力有细分调试、算法、数据结构、OS原理等。__架构能力__ ，则是解决代码规模的问题，当一个系统足够复杂，你会写每一块，能解决每一个问题，不等于你能搞定整个系统，这就需要架构能力，架构能力包含了一些意识，比如解耦、接口隔离，也包含认识业务建立抽象模型，也有一些常见的模式，比如经典的 MVC，还有设计层面，面向对象、设计模式等等。最后 __工程能力__，则是解决协作的问题，当系统规模更大，光靠一个人，是没办法完成的，如何保证几个高手互相能够配合好？如何保证项目里面水平最差的人不拖后腿？这个工程化建设，往往会跨越多个业务，以汇报关系上的团队为单位来做。包括前后端解耦，模块化，质量保证，代码风格，等等。
+	
+	__任何被动的痛苦，都没法给人带来进步，你的痛苦倒是可能给老板带来更多收入。__
+
 
 
 ---------
