update vim article

--- a/source/_posts/2017-12-07-初识vim.md
+++ b/source/_posts/2017-12-07-初识vim.md
@@ -1,5 +1,5 @@
 ---
-title: 初始vim
+title: 初识vim
 date: 2017-12-07 16:03:11
 tags: vim
 categories:
@@ -9,7 +9,7 @@ updated:
 <!-- 整理vim使用过程中的问题 -->
 > 所剩时日无多，更加心平气和，也更加珍惜每一天的每一次。
 
-学习资料 [链接](https://www.cnblogs.com/lijia0511/p/5644566.html)
+学习资料 [链接](https://github.com/eyea/DailyIssues/issues/1)
 
 <!--more-->
 ## Issues
@@ -21,3 +21,4 @@ updated:
     brew uninstall python
     brew install python --with-brewed-openssl  
   ```
+  更多的关于vim的知识，记录在这里 [Github](https://github.com/eyea/DailyIssues/issues/1)
